[gd_scene load_steps=11 format=3 uid="uid://c570uffcicj36"]

[ext_resource type="Script" path="res://gd/levels.gd" id="1_7wwe4"]
[ext_resource type="PackedScene" uid="uid://d0e75utwaqonb" path="res://scene/bg.tscn" id="2_nqkum"]
[ext_resource type="Texture2D" uid="uid://boucs5lmto1w8" path="res://ui/UI/Buttons/Button_Blue_9Slides.png" id="3_2pdnc"]
[ext_resource type="Texture2D" uid="uid://bpdf0ddqgwjrl" path="res://ui/Icon/ArrowLeft@2x.png" id="3_jslpx"]
[ext_resource type="Texture2D" uid="uid://cvwrhq35nhnhq" path="res://ui/Icon/ArrowRight@2x.png" id="4_nw8mo"]
[ext_resource type="Texture2D" uid="uid://dmg84kn3owu56" path="res://ui/UI/Buttons/Button_Blue_9Slides_Pressed.png" id="4_tpnni"]
[ext_resource type="Texture2D" uid="uid://b6c1yhg6to5d0" path="res://ui/UI/Buttons/Button_Hover_9Slides.png" id="5_2unte"]
[ext_resource type="Texture2D" uid="uid://cyaeut8vu537o" path="res://ui/Icon/Home@2x.png" id="5_j3dyy"]
[ext_resource type="Texture2D" uid="uid://c2u3cqq6apyey" path="res://ui/UI/Icons/Disable_10.png" id="6_vwhi1"]
[ext_resource type="Texture2D" uid="uid://10okipvm2roj" path="res://ui/UI/Buttons/Button_Red_9Slides_Pressed.png" id="7_5ryo0"]

[node name="levels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7wwe4")

[node name="bg" parent="." instance=ExtResource("2_nqkum")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
custom_minimum_size = Vector2(10, 10)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 95.0
offset_top = 55.0
offset_right = 431.0
offset_bottom = 279.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.38, 0.38)
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 5

[node name="level1" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")
texture_disabled = ExtResource("6_vwhi1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer/level1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "1"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainer/GridContainer/level1"]
z_index = -1
texture = ExtResource("7_5ryo0")
offset = Vector2(96, 99)

[node name="level2" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")
texture_disabled = ExtResource("6_vwhi1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer/level2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "2"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainer/GridContainer/level2"]
z_index = -1
texture = ExtResource("7_5ryo0")
offset = Vector2(96, 99)

[node name="level3" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")
texture_disabled = ExtResource("6_vwhi1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer/level3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "3"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainer/GridContainer/level3"]
z_index = -1
texture = ExtResource("7_5ryo0")
offset = Vector2(96, 99)

[node name="level4" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")
texture_disabled = ExtResource("6_vwhi1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer/level4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "4"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainer/GridContainer/level4"]
z_index = -1
texture = ExtResource("7_5ryo0")
offset = Vector2(96, 99)

[node name="level5" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")
texture_disabled = ExtResource("6_vwhi1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer/level5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "5"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainer/GridContainer/level5"]
z_index = -1
texture = ExtResource("7_5ryo0")
offset = Vector2(96, 99)

[node name="level6" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")
texture_disabled = ExtResource("6_vwhi1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer/level6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "6"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainer/GridContainer/level6"]
z_index = -1
texture = ExtResource("7_5ryo0")
offset = Vector2(96, 99)

[node name="level7" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")
texture_disabled = ExtResource("6_vwhi1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer/level7"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "7"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainer/GridContainer/level7"]
z_index = -1
texture = ExtResource("7_5ryo0")
offset = Vector2(96, 99)

[node name="level8" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")
texture_disabled = ExtResource("6_vwhi1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer/level8"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "8"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainer/GridContainer/level8"]
z_index = -1
texture = ExtResource("7_5ryo0")
offset = Vector2(96, 99)

[node name="level9" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")
texture_disabled = ExtResource("6_vwhi1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer/level9"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "9"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainer/GridContainer/level9"]
z_index = -1
texture = ExtResource("7_5ryo0")
offset = Vector2(96, 99)

[node name="level10" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")
texture_disabled = ExtResource("6_vwhi1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer/level10"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "10"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainer/GridContainer/level10"]
z_index = -1
texture = ExtResource("7_5ryo0")
offset = Vector2(96, 99)

[node name="level11" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")
texture_disabled = ExtResource("6_vwhi1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer/level11"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "11"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainer/GridContainer/level11"]
z_index = -1
texture = ExtResource("7_5ryo0")
offset = Vector2(96, 99)

[node name="level12" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")
texture_disabled = ExtResource("6_vwhi1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer/level12"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "12"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainer/GridContainer/level12"]
z_index = -1
texture = ExtResource("7_5ryo0")
offset = Vector2(96, 99)

[node name="level13" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")
texture_disabled = ExtResource("6_vwhi1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer/level13"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "13"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainer/GridContainer/level13"]
z_index = -1
texture = ExtResource("7_5ryo0")
offset = Vector2(96, 99)

[node name="level14" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")
texture_disabled = ExtResource("6_vwhi1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer/level14"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "14"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainer/GridContainer/level14"]
z_index = -1
texture = ExtResource("7_5ryo0")
offset = Vector2(95, 99)

[node name="level15" type="TextureButton" parent="CanvasLayer/MarginContainer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")
texture_disabled = ExtResource("6_vwhi1")
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/GridContainer/level15"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -27.0
offset_right = 16.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "15"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MarginContainer/GridContainer/level15"]
z_index = -1
texture = ExtResource("7_5ryo0")
offset = Vector2(95, 99)

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -78.0
offset_top = -66.0
offset_right = 114.0
offset_bottom = 126.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/TextureButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -56.0
offset_right = 56.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_j3dyy")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -64.0
offset_right = 288.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(0, -5)
alignment = 1

[node name="left" type="TextureButton" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer/left"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -56.0
offset_right = 42.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_jslpx")

[node name="right" type="TextureButton" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2pdnc")
texture_pressed = ExtResource("4_tpnni")
texture_hover = ExtResource("5_2unte")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer/right"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -56.0
offset_right = 42.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_nw8mo")

[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/level6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/level7" to="." method="_on_level_7_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/level8" to="." method="_on_level_8_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/GridContainer/level9" to="." method="_on_level_9_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureButton" to="." method="_on_texture_button_pressed"]
