extends Control




func _on_level_1_pressed() -> void:
	get_tree().change_scene_to_file("res://scene/level_1.tscn")
	 # Replace with function body.


func _on_level_2_pressed() -> void:
	get_tree().change_scene_to_file("res://scene/level_2.tscn")
	 # Replace with function body.


func _on_level_3_pressed() -> void:
	get_tree().change_scene_to_file("res://scene/level_3.tscn")
	 # Replace with function body.


func _on_level_4_pressed() -> void:
	get_tree().change_scene_to_file("res://scene/level_4.tscn")
	# Replace with function body.


func _on_level_5_pressed() -> void:
	get_tree().change_scene_to_file("res://scene/level_5.tscn")
	 # Replace with function body.


func _on_level_6_pressed() -> void:
	get_tree().change_scene_to_file("res://scene/level_6.tscn")
	 # Replace with function body.


func _on_texture_button_pressed() -> void:
	get_tree().change_scene_to_file("res://scene/start.tscn")
	 # Replace with function body.


func _on_level_7_pressed() -> void:
	get_tree().change_scene_to_file("res://scene/level_7.tscn")
	pass # Replace with function body.


func _on_level_8_pressed() -> void:
	get_tree().change_scene_to_file("res://scene/level_8.tscn")
	pass # Replace with function body.


func _on_level_9_pressed() -> void:
	get_tree().change_scene_to_file("res://scene/level_9.tscn")
	pass # Replace with function body.
